apps/synapse/base/overlay_artifacts/synapse-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: <REPLACE_WITH_PREFIX>cert-issuer
spec:
  rules:
    - host: synapse.<REPLACE_WITH_SYNAPSE_HOMESERVER>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: synapse
                port: 
                  # example using port name
                  name: synapse
  tls:
    - hosts:
        - synapse.<REPLACE_WITH_SYNAPSE_HOMESERVER>
      secretName: <REPLACE_WITH_PREFIX>synapse-ssl
